--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 240px;
-    height: 240px;
 }
 
 body {
@@ -21,4 +19,13 @@ body {
     height: 100vh; /* Full viewport height */
     width: 100vw; /* Full viewport width */
     margin: 0; /* Remove default margin */
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    margin-bottom: 100px;
 }
